Add search support to rest api
